DTO 최적화 및 각종 에러 잡는작업, build.gradle 파일에도 변경점 존재, properties jpa 관련 코드 추가

--- a/src/main/resources/templates/members/signup.html
+++ b/src/main/resources/templates/members/signup.html
@@ -32,11 +32,11 @@
             <div class="field-error" th:errors="*{loginId}" />
         </div>
         <div>
-            <label for="loginPwd">비밀번호</label>
-            <input type="password" id="loginPwd" th:field="*{loginPwd}"
+            <label for="password">비밀번호</label>
+            <input type="password" id="password" th:field="*{password}"
                    class="form-control"
                    th:errorclass="field-error">
-            <div class="field-error" th:errors="*{loginPwd}" />
+            <div class="field-error" th:errors="*{password}" />
         </div>
         <div>
             <label for="name">이름</label>
