front 정적코드, mysql 로 안정화작업, Controller안정화 후 추가할예정

--- a/src/main/resources/static/css/mainpage.css
+++ b/src/main/resources/static/css/mainpage.css
@@ -281,7 +281,7 @@ a:active{
 
 .blank_div {
   width:60px;
-  height: 35px;px;
+  height: 35px;
   border-top:1px solid #e3e3e3;
   border-left:1px solid #e3e3e3;
   border-right:1px solid #e3e3e3;
