--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -93,7 +93,7 @@
     display:flex;
     justify-content:center;
     align-items:center;
-    width:47px;
+    width:24px;
     height:24px;
   }
 
@@ -284,8 +284,11 @@ header .sub_category_community .wrap_sub_category_community .sub_menu_content {
 
 /* footer */
 footer {
-  width:100%;
+  width:1920px;
   height:100px;
+  position:relative;
+  left:50%;
+  transform: translate(-50%,0);
   background-color: #ededed;
   display:flex;
   align-items:center;
