--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -9,9 +9,9 @@
     <div class="footinner">
         <div class="footcategory">
             <a href="./serviceagree.html">이용약관</a>
-            <a href="../static/html/personal_info/privacy.html" style="font-weight:bolder">개인정보처리방침</a>
-            <a href="../static/html/personal_info/youthpolicy.html">청소년보호정책</a>
-            <a href="../static/html/personal_info/rules.html">커뮤니티이용규칙</a>
+            <a href="../../static/html/personal_info/privacy.html" style="font-weight:bolder">개인정보처리방침</a>
+            <a href="../../static/html/personal_info/youthpolicy.html">청소년보호정책</a>
+            <a href="../../static/html/personal_info/rules.html">커뮤니티이용규칙</a>
             <a href="./inquire.html">문의사항</a>
             <span class="copyright" style="font-weight:bolder">© Extend</span>
         </div>
