--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -39,7 +39,15 @@
     <script defer src="/js/calendar.js"></script>
 </head>
 <body>
-<header th:include="header.html"></header>
+<header th:if="${loggedIn}">
+    <header th:include="fragments/header-after.html"></header>
+</header>
+<header th:unless="${loggedIn}">
+    <header th:include="fragments/header-before.html"></header>
+</header>
+<div>
+    <input type="text" th:field="*{loggedIn}">
+</div>
 <div class="wrap_mainframe">
     <div class="mainframe">
         <div class="firstdivision">
@@ -468,6 +476,6 @@
         </div>
     </div>
 </div>
-<footer th:include="footer.html"></footer>
+<footer th:include="fragments/footer.html"></footer>
 </body>
 </html>
