--- a/src/main/resources/templates/register/register.html
+++ b/src/main/resources/templates/register/register.html
@@ -9,7 +9,7 @@
   <title>회원가입</title>
 </head>
 <body>
-<form method="post" th:action="@{/signup/agree_policy}" id="register">
+<form method="post" th:action="@{/register/agree_policy}" id="register">
   <div class="wrap_content">
     <div class="text">
       <h2 class="main">Extend 회원가입</h2>
