--- a/src/main/resources/templates/fragments/header-before.html
+++ b/src/main/resources/templates/fragments/header-before.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="login_register">
                         <a href="/login/login" class="login_button">로그인</a>
-                        <a href="/signup/signup" class="register_button">회원가입</a>
+                        <a href="/register/register" class="register_button">회원가입</a>
                     </div>
                 </div>
             </ul>
