회원가입,로그인관련 3차커밋

--- a/src/main/resources/templates/register/info_input.html
+++ b/src/main/resources/templates/register/info_input.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
     <link th:href="@{/css/info_input.css}" rel="stylesheet">
     <link th:href="@{/css/header.css}" rel="stylesheet">
-    <script defer th:src="@{/js/password_confirm.js}"></script>
+    <script defer th:src="@{/js/password_confirm22.js}"></script>
     <!--Google Api-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
