--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -8,7 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/mainpage.css">
     <link rel="stylesheet" href="/css/header.css">
-    <link rel="stylesheet" href="/css/footer.css">
     <!-- open graph -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Extend" />
@@ -45,9 +44,6 @@
 <header th:unless="${loggedIn}">
     <header th:include="fragments/header-before.html"></header>
 </header>
-<div>
-    <input type="text" th:field="*{loggedIn}">
-</div>
 <div class="wrap_mainframe">
     <div class="mainframe">
         <div class="firstdivision">
@@ -220,7 +216,7 @@
                         <div class="title" id="school_announcement">
                             질문, 답변게시판
                         </div>
-                        <a href="board/qna_board.html" class="more">
+                        <a href="board/qna_board.html" class="more">SSSS
                             더보기
                         </a>
                     </div>
