--- a/src/main/resources/css/info_input.css
+++ b/src/main/resources/css/info_input.css
@@ -107,3 +107,9 @@ body{
   #not {
     display:none;
   }
+
+  #hakbun::-webkit-inner-spin-button {
+    appearance:none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+  }
