변경사항 일부 커밋

--- a/src/main/resources/templates/register/info_input.html
+++ b/src/main/resources/templates/register/info_input.html
@@ -38,6 +38,8 @@
                 <div class="other_info">
                     <span class="text">이름</span>
                     <input type="text" maxlength="10" class="input" th:field="*{name}">
+                    <span class="text">학번</span>
+                    <input type="text" maxlength="10" class="input" id="hakbun" th:field="*{studentId}">
                     <span class="text">이메일</span>
                     <input type="email" maxlength="255" class="input" th:field="*{email}">
                 </div>
