회원가입 아이디 중복체크 DB 검증과 사용자에게 알람수신 , 게시글 작성기능

--- a/src/main/resources/templates/board/writing/write.html
+++ b/src/main/resources/templates/board/writing/write.html
@@ -27,7 +27,7 @@
                 <!-- 서버와의 통신을 위한 th:action 및 th:object 추가. 필요한 경우 th:action의 URL 수정 -->
                 <div class="writing_div">
                     <div class="board_name">
-                        <input type="hidden" id="boardKind" name="boardKind">
+                        <input type="hidden" id="boardKind" name="boardKind" value="FREE">
                         <select id="select_value" class="board_name_inner" onchange="ChangeValue()">
                             <option value="free_board">자유게시판</option>
                             <option value="market_board">장터게시판</option>
