게시글 작성시 로그인 한 사용자만 가능하게 처리, 게시글 작성시 익명기능 추가,인터셉터 관련 로직들 다시 활성화

--- a/src/main/resources/templates/board/writing/write.html
+++ b/src/main/resources/templates/board/writing/write.html
@@ -32,7 +32,7 @@
                             <option value="free_board">자유게시판</option>
                             <option value="market_board">장터게시판</option>
                             <option value="qna_board">질문,답변 게시판</option>
-                            <option value="department_board">학과 공지사항</option>
+                        <!--<option value="department_board">학과 공지사항</option>-->
                         </select>
                     </div>
                     <div class="writing_title">
