--- a/src/main/resources/templates/fragments/header-before.html
+++ b/src/main/resources/templates/fragments/header-before.html
@@ -54,7 +54,7 @@
                         <span class="material-icons">search</span>
                     </div>
                     <div class="login_register">
-                        <a href="/login/login" class="login_button">로그인</a>
+                        <a href="/login" class="login_button">로그인</a>
                         <a href="/register/register" class="register_button">회원가입</a>
                     </div>
                 </div>
