login창 footer위치 오류 수정

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -288,6 +288,7 @@ footer {
   height:100px;
   position:relative;
   left:50%;
+  bottom:0;
   transform: translate(-50%,0);
   background-color: #ededed;
   display:flex;
