--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -18,11 +18,17 @@ a:link{
     color:black;
   }
 
+#wrapping {
+    height: 90vh;
+    width:100%;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
 .logingrid{
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
+    width:360px;
+    height:200px;
 }
 
 .logingrid .input {
