--- a/src/main/resources/templates/fragments/header-before.html
+++ b/src/main/resources/templates/fragments/header-before.html
@@ -14,36 +14,36 @@
         <div class="inner">
             <ul class="main-menu">
                 <div class="blank"> <!--정렬때문에 넣은 빈공간-->
-                    <a href="/static/html/index.html" class="homebutton"><span class="material-icons-outlined">home</span></a>
+                    <a href="/" class="homebutton"><span class="material-icons-outlined">home</span></a>
                 </div>
                 <ul class="wrap_category">
                     <li class="main_category_mypage">
-                        <a href="/static/html/mypage/mypage_main.html" class="main_category_name">
+                        <a href="/mypage/mypage_main" class="main_category_name">
                             마이페이지
                         </a>
                         <div class="sub_category_mypage hide">
                             <div class="wrap_sub_category_mypage">
-                                <a href="../static/html/personal_info/personal_info_change.html" class="sub_menu_content">개인정보관리</a>
-                                <a href="./subject.html" class="sub_menu_content">수강과목</a>
-                                <a href="../static/html/mypage/schedule.html" class="sub_menu_content">시간표</a>
-                                <a href="./bookmark.html" class="sub_menu_content">즐겨찾기</a>
+                                <a href="/personal_info/personal_info_change" class="sub_menu_content">개인정보관리</a>
+                                <a href="/subject" class="sub_menu_content">수강과목</a>
+                                <a href="/mypage/schedule" class="sub_menu_content">시간표</a>
+                                <a href="/bookmark" class="sub_menu_content">즐겨찾기</a>
                             </div>
                         </div>
                     </li>
                     <li class="main_category">
-                        <a href="../static/html/board/notice.html" class="main_category_name">
+                        <a href="/board/notice" class="main_category_name">
                             공지사항
                         </a>
                     </li>
                     <li class="main_category_community">
-                        <a href="../static/html/board/board_collection.html" class="main_category_name">
+                        <a href="/board/board_collection" class="main_category_name">
                             커뮤니티
                         </a>
                         <div class="sub_category_community hide">
                             <div class="wrap_sub_category_community">
-                                <a href="../static/html/board/free_board.html" class="sub_menu_content">자유게시판</a>
-                                <a href="../static/html/board/qna_board.html" class="sub_menu_content">질문, 답변게시판</a>
-                                <a href="../static/html/board/market_board.html" class="sub_menu_content">장터게시판</a>
+                                <a href="/board/free_board" class="sub_menu_content">자유게시판</a>
+                                <a href="/board/qna_board" class="sub_menu_content">질문, 답변게시판</a>
+                                <a href="/board/market_board" class="sub_menu_content">장터게시판</a>
                             </div>
                         </div>
                     </li>
