--- a/src/main/resources/templates/board/writing/write.html
+++ b/src/main/resources/templates/board/writing/write.html
@@ -52,7 +52,7 @@
 
                     <div class="button_row">
                         <div class="left_div">
-                            <label class="file_upload" for="image">이미지 업로드</label>
+                            <label class="file_upload" for="file">이미지 업로드</label>
                         </div>
                         <div class="right_div">
                             <label for="anonymous" class="checkbox_wrap">
@@ -62,7 +62,7 @@
                             <input type="submit" class="writing_completion" value="글 작성">
                         </div>
                     </div>
-                    <input id="image" class="image" type="file" accept="image/*" name="image"/>
+                    <input id="file" class="file" type="file" multiple accept="*/*" name="file"/>
                 </div>
             </form>
         </div>
