--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -1,3 +1,23 @@
+a{
+  text-decoration:none;
+}
+
+a:link{
+  color:black;
+}
+
+a:visited{
+  color:black;
+}
+
+a:hover{
+  color:black;
+}
+
+a:active{
+  color:black;
+}
+
   .inner {
     width:1100px;
     margin: 0 auto;
@@ -19,7 +39,7 @@
 
   header .inner {
     height: 60px;
-    width: 100%;
+    width: 100vw;
     font-size: 16px;
   }
   
@@ -38,7 +58,11 @@
   }
   
   header .main-menu .blank{
+    display:flex;
+    align-items:center;
+    padding-left:25px;
     width: calc(100% / 3);
+    height:60px;
   }
   
   header .main-menu .wrap_category{
@@ -66,7 +90,24 @@
     height:22px;
     color:black;
   }
-  
+
+  /*추가부분*/
+  header .main-menu .wrap_category .main_category_name{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    width:76px;
+  }
+
+  @media (max-width: 820px) {
+    header .inner {
+      width:820px;
+      left:0;
+      top:0;
+    }
+  }
+  /**/
+
   header .main-menu .wrap_category .main_category_community{
     padding:4px 4px 19px 4px;
     margin-top:15px;
