--- a/src/main/resources/templates/board/board_collection.html
+++ b/src/main/resources/templates/board/board_collection.html
@@ -17,221 +17,73 @@
         rel="stylesheet">
 </head>
 <body>
-<!--여기에 헤더 삽입-->
+<header th:if="${loggedIn}">
+    <header th:include="/fragments/header-after.html"></header>
+</header>
+<header th:unless="${loggedIn}">
+    <header th:include="/fragments/header-before.html"></header>
+</header>
   <div class="wrap_mainframe">
     <div class="mainframe">
       <div class="firstdivision">
-        <div class="boardblock">
-            <div class="board_base">
-                <div class="board_header" id="department_announcement">
-                    <div class="title">
-                        자유게시판
-                    </div>
-                    <a href="free_board.html" class="more">
-                        더보기
-                    </a>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        아 오늘 시험 망했네
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        난 라면먹고 잔다
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        옆방 너무 시끄러움
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-            </div>
-        </div>
+          <div class="boardblock">
+              <div class="board_base">
+                  <div class="board_header">
+                      <div class="title" id="school_announcement">
+                          자유게시판
+                      </div>
+                      <a href="/board/free_board" class="more">
+                          더보기
+                      </a>
+                  </div>
+                  <!-- 자유 게시판의 최근 게시글 7개를 반복하여 표시 -->
+                  <div class="board_content" th:each="board : ${recentFreeBoards}">
+                      <div class="board_post" th:text="${board.title}"></div>
+                      <div class="post_time" th:text="${board.formattedFinalDate}"></div>
+                  </div>
+              </div>
+          </div>
       </div>
       <div class="seconddivision">
-        <div class="boardblock">
-            <div class="board_base">
-                <div class="board_header" id="department_announcement">
-                    <div class="title">
-                        질문, 답변게시판
-                    </div>
-                    <a href="qna_board.html" class="more">
-                        더보기
-                    </a>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        아 오늘 시험 망했네
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        난 라면먹고 잔다
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        옆방 너무 시끄러움
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-            </div>
-        </div>
+          <div class="boardblock">
+              <div class="board_base">
+                  <div class="board_header">
+                      <div class="title" id="school_announcement">
+                          질문, 답변게시판
+                      </div>
+                      <a href="/board/qna_board" class="more">
+                          더보기
+                      </a>
+                  </div>
+                  <!-- QnA 게시판의 최근 게시글 7개를 반복하여 표시 -->
+                  <div class="board_content" th:each="board : ${recentQnaBoards}">
+                      <div class="board_post" th:text="${board.title}"></div>
+                      <div class="post_time" th:text="${board.formattedFinalDate}"></div>
+                  </div>
+              </div>
+          </div>
       </div>
       <div class="thirddivision">
-        <div class="boardblock">
-            <div class="board_base">
-                <div class="board_header" id="department_announcement">
-                    <div class="title">
-                        장터게시판
-                    </div>
-                    <a href="market_board.html" class="more">
-                        더보기
-                    </a>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        아 오늘 시험 망했네
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        난 라면먹고 잔다
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        옆방 너무 시끄러움
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-                <div class="board_content">
-                    <div class="board_post">
-                        우리 축제에 누구옴?
-                    </div>
-                    <div class="post_time">
-                        03/24
-                    </div>
-                </div>
-            </div>
-        </div>
+          <div class="boardblock">
+              <div class="board_base">
+                  <div class="board_header">
+                      <div class="title" id="school_announcement">
+                          장터게시판
+                      </div>
+                      <a href="/board/market_board" class="more">
+                          더보기
+                      </a>
+                  </div>
+                  <!-- 장터 게시판의 최근 게시글 4개를 반복하여 표시 -->
+                  <div class="board_content" th:each="board : ${recentMarketBoards}">
+                      <div class="board_post" th:text="${board.title}"></div>
+                      <div class="post_time" th:text="${board.formattedFinalDate}"></div>
+                  </div>
+              </div>
+          </div>
       </div>
     </div>
   </div>
-
+<footer th:include="/fragments/footer.html"></footer>
 </body>
 </html>
